fix(nb): spinner catch error statuses correctly
Fraud Detector model version status reports 'ERROR' rather than
'FAILED', so previous logic will not have terminated the wait as
intended.

--- a/FraudDetector_intro.ipynb
+++ b/FraudDetector_intro.ipynb
@@ -859,11 +859,15 @@
    "source": [
     "import util  # (See the util/ folder)\n",
     "\n",
+    "# At the time of writing, the possible status list was:\n",
+    "# TRAINING_IN_PROGRESS, TRAINING_COMPLETE, ACTIVATE_REQUESTED, ACTIVATE_IN_PROGRESS, ACTIVE,\n",
+    "# INACTIVATE_REQUESTED, INACTIVATE_IN_PROGRESS, INACTIVE, ERROR\n",
+    "# ...so could make these checks more specific if you wanted to\n",
     "def is_training_complete(desc):\n",
     "    status = desc['status']\n",
     "    if status == 'TRAINING_COMPLETE':\n",
     "        return True\n",
-    "    elif 'FAILED' in status:\n",
+    "    elif 'FAILED' in status or 'ERROR' in status:\n",
     "        raise ValueError(f'Training job failed!\\n{desc}')\n",
     "\n",
     "util.progress.polling_spinner(\n",
@@ -964,7 +968,7 @@
     "    status = desc['status']\n",
     "    if status == TARGET_MODEL_STATUS:\n",
     "        return True\n",
-    "    elif 'FAILED' in status:\n",
+    "    elif 'FAILED' in status or 'ERROR' in status:\n",
     "        raise ValueError(f'Deployment failed!\\n{desc}')\n",
     "\n",
     "util.progress.polling_spinner(\n",
